# tatr

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: tatr.yaml
libs/: array.h  astring.c  astring.h  clag.h  fs.c  fs.h  log.h  temp.c  temp.h  util.h
src/: editor.c  editor.h  global.h  issue.c  issue.h  main.c  tatrlog.c  tatrlog.h  ui.c  ui.h
src/cmd/: attach.c  attachls.c  basic.c  close.c  cmd.h  comment.c  config.c  delete.c  detach.c  edit.c  export.c  init.c  list.c  log.c  new.c  reopen.c  search.c  show.c  status.c  tag.c
src/cmd/export/: export.c  export.h  json.c  markdown.c
tests/: CMakeLists.txt  Makefile  main.c  run_tests  tatr_test_log.txt  test_attachments.c  test_export.c  test_framework.h  test_helpers.h  test_init_new.c  test_lifecycle_org.c  test_list_show_edit.c  test_status_meta.c
